Projects to Assignments and Projects

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>Husniya Jamil</h1>
-    <p>N320 Projects</p>
+    <p>N320 Assignments and Projects</p>
     <p>Fall 2022</p>
 
-    
+
 </body>
 </html>
