--- a/labs/lab1/index.html
+++ b/labs/lab1/index.html
@@ -7,14 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Husniya Jamil</h1>
-    <p>N320 Assignments and Projects</p>
-    <p>Fall 2022</p>
-
-
-    <h2>Lab 1</h2>
-    <p> <a href="labs/lab1/index.html">First Example</a></p>
-
-
+    Lab 1 Here
 </body>
 </html>
