--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <h2>Lab 1</h2>
     <p> <a href="labs/lab1/index.html">First Example</a></p>
 
+    <h2>SVG Lab</h2>
+    <p><a href="labs/SVG Lab/index.html">SVG Lab</a></p>
+
 
 </body>
 </html>
