--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <h2>SVG Lab</h2>
     <p><a href="labs/SVG Lab/index.html">SVG Lab</a></p>
 
+    <h2>Animation Lab</h2>
+    <p><a href="labs/Animation Lab/index.html">SVG Lab</a></p>
+
 
 </body>
 </html>
