Animation Lab Final

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p><a href="labs/SVG Lab/index.html">SVG Lab</a></p>
 
     <h2>Animation Lab</h2>
-    <p><a href="labs/Animation Lab/index.html">SVG Lab</a></p>
+    <p><a href="labs/Animation Lab/index.html">Animation Lab</a></p>
 
 
 </body>
